# ts-media-bridge

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
docs/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst
notebooks/: album_analysis.csv  album_article_matches.csv  api_development.ipynb  matched_articles.csv  nyt_api_dev.ipynb  nyt_articles.csv  spotify_api_dev.ipynb  taylor_swift_combined_analysis.csv  ts_albums.csv  vignette.ipynb
notebooks/.virtual_documents/: Untitled.ipynb  api_development.ipynb  nyt_api_dev.ipynb  spotify_api_dev.ipynb  vignette.ipynb
tests/: test_basic.py  test_clients.py
ts_media_bridge/: __init__.py  media_bridge.py  nyt_client.py  spotify_client.py  spotify_helpers.py
